# evaluating-skills-tutorial

./: .gitignore  IMPLEMENTATION.md  README.md  pyproject.toml  verify.py
.agents/skills/sales_pivot_analysis_improved/: SKILL.md
.agents/skills/sec_financial_report_improved/: SKILL.md
.openhands/skills/: software_dependency_audit_baseline.md
docs/: ADDING_A_TASK.md  METHODOLOGY.md  blog_post.md
results/: fresh_matrix_manifest.json  fresh_matrix_summary.csv  fresh_matrix_summary.json  model_matrix_summary.csv  model_matrix_summary.json
results/sales-pivot-analysis/improved-skill/: events.json  metrics.json  result.xlsx
results/sales-pivot-analysis/no-skill/: events.json  metrics.json  result.xlsx
results/sec-financial-report/improved-skill/: answers.json  events.json  metrics.json
results/visuals/: index.html
scripts/: check_cloud_repo_skills.py  compare_runs.py  export_metrics_summary.py  generate_visuals.py  run_dependency_audit_eval.py  run_eval.py  run_fresh_matrix.py  run_model_matrix.py  run_release_batch.py  run_sales_pivot_eval.py  run_sec_financial_report_eval.py  start_local_agent_server.sh  sync_skills.py
skills/improved/: SKILL.md
src/skill_eval/: __init__.py  constants.py  verification.py  verify.py
src/tutorial_openhands_skill_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tasks/sales_pivot_analysis/: expected_workbook.json  task_prompt.txt  verify.py
tasks/sec_financial_report/: expected_answers.json  task_prompt.txt  verify.py
tasks/software_dependency_audit/: task_prompt.txt  verify.py
(+268 files in other folders)
